--- a/src/app/pages/character-list/components/character/character.component.html
+++ b/src/app/pages/character-list/components/character/character.component.html
@@ -1,1 +1,12 @@
-<p>character works!</p>
+
+<!--Pintamos los personajes, que traemos del character-list
+con el bucle, a traves de un input-->
+<div
+    *ngIf="character"
+    class="character"
+>
+    <img src="{{character.image}}" alt="character">
+    <p>{{"CHARACTER.NAME" | translate }}: {{ character.name }}</p>
+    <p>{{"CHARACTER.FAMOUS TWIN" | translate }}: <a href="https://es.wikipedia.org/wiki/Anexo:Reparto_de_pel%C3%ADculas_de_Harry_Potter">{{character.actor}}</a></p>
+    <p>{{"CHARACTER.HOUSE" | translate }}: {{ character.house }}</p>
+</div>
