FEAT some changes

--- a/src/app/pages/character-list/components/character/character.component.html
+++ b/src/app/pages/character-list/components/character/character.component.html
@@ -9,4 +9,5 @@ con el bucle, a traves de un input-->
     <p>{{"CHARACTER.NAME" | translate }}: {{ character.name }}</p>
     <p>{{"CHARACTER.FAMOUS TWIN" | translate }}: <a href="https://es.wikipedia.org/wiki/Anexo:Reparto_de_pel%C3%ADculas_de_Harry_Potter">{{character.actor}}</a></p>
     <p>{{"CHARACTER.HOUSE" | translate }}: {{ character.house }}</p>
+    <p>{{"CHARACTER.GENDER" | translate }}: {{character.gender}}</p>
 </div>
