--- a/src/app/pages/character-list/character-list.component.html
+++ b/src/app/pages/character-list/character-list.component.html
@@ -1,7 +1,7 @@
-<p>Aqui está el character list</p>
+
 <!--Para ejecutar bien el translate, como si fuera un objeto, porque en el json hemos creado como
 una especie de objeto, en que el componente tiene las cosas a traducir-->
-<p>{{ 'CHARACTER-LIST.OUR STUDENTS AND STAFF' | translate }}</p>
+<h1>{{ 'CHARACTER-LIST.OUR STUDENTS AND STAFF' | translate }}</h1>
 <!--Pintamos con el character los elementos
     (se renderiza por cada elemento), NO CON EL CHARACTER-LIST.
 [input] ==> que tiene el componente character para recibir la info del bucle for que hacemos -->
