--- a/src/app/pages/character-list/character-list.component.scss
+++ b/src/app/pages/character-list/character-list.component.scss
@@ -1,6 +1,10 @@
-.character__list {
+.character__list_container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     padding: 24px;
+}
+.character__list_h1{
+    text-align: center;
+    padding: 20px;
 }
