FEAT: new route houses

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -10,6 +10,10 @@
         class="header__link"
         [routerLink]="['character-list']"
     >{{ 'HEADER.OUR STUDENTS AND STAFF' | translate }}</a>
+    <a
+        class="header__link"
+        [routerLink]="['house-list']"
+    >{{ 'HEADER.HOUSES' | translate }}</a>
     <div
         class="header__div"
     >
