feat: some styles, and shared component

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -14,6 +14,14 @@
         class="header__link"
         [routerLink]="['house-list']"
     >{{ 'HEADER.HOUSES' | translate }}</a>
+    <a
+        class="header__link"
+        [routerLink]="['students-list']"
+    >{{ 'HEADER.STUDENTS' | translate }}</a>
+    <a
+        class="header__link"
+        [routerLink]="['inscription-student']"
+    > {{ "HEADER.INSCRIPTION STUDENT" | translate }}</a>
     <div
         class="header__div"
     >
@@ -33,6 +41,9 @@
         </label>
     </div>
    
+   
 </div>
+    
+
 
 
