--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,6 +1,9 @@
-
-<h2
-    class="notFounf__h2"
+<div
+    class="container"
 >
-    <i class="fa-solid fa-circle-exclamation"></i>
-{{"NOTFOUND.DANGER" | translate}}</h2>
+    <h2
+        class="notFounf__h2"
+    >
+        <i class="fa-solid fa-circle-exclamation"></i>
+    {{"NOTFOUND.DANGER" | translate}}</h2>
+</div>
