--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,3 +1,22 @@
-<p
+<div
     class="footer"
->footer works!</p>
+>
+<p
+    class="footer__link"
+>
+    <a 
+        class="footer__link"
+        href="https://github.com/Rubenprada">
+        <i class="fa-brands fa-github"></i>
+    Github
+    </a></p>
+<p
+    class="footer__link"
+>
+    <a 
+    class="footer__link"
+    href="https://www.linkedin.com/in/rub%C3%A9n-prada-l%C3%B3pez-fullstackdeveloper/">
+    <i class="fa-brands fa-linkedin"></i>
+    Linkedin
+    </a></p>
+</div>
