--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -1,6 +1,24 @@
 .footer {
     bottom:0px;
-    height:100%;
+    height: 100%;
     width:100%;
-    background:#999;
+    background-color: rgb(232, 232, 232);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 20px;
+    border-top: 5px black solid;
+    
+    &__link{
+        color: black;
+        text-align: center;
+        padding-bottom: 30px;
+        margin-right: 60px;
+        text-decoration: none;
+    }
+    &__link:hover{
+        text-transform: uppercase;
+        font-weight: bolder;
+        color: chartreuse;
+    }
 }
