--- a/src/app/core/components/loading/loading.component.scss
+++ b/src/app/core/components/loading/loading.component.scss
@@ -12,5 +12,8 @@
     color: white;
     height: 100vh;
     background-color: grey;
-    opacity: 0.8;
+    background-image: url(../../../../assets/images/harry.gif);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
