--- a/src/app/pages/character-list/character-list.component.scss
+++ b/src/app/pages/character-list/character-list.component.scss
@@ -1,10 +1,34 @@
-.character__list_container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding: 24px;
+.character__list{
+    background-color: blanchedalmond;
+    &_container {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding: 24px;
+    }
+    &_searcher{
+        text-align: center;
+        padding: 20px;
+        font-family: Tahoma;
+    }
 }
 .character__list_h1{
     text-align: center;
     padding: 20px;
+    font-family: Tahoma;
+    background-color: blanchedalmond;
+}
+.searcher__input{
+    border-radius: 40px;
+    height: 40px;
+    margin-right: 20px;
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+.searcher__select{
+    border-radius: 40px;
+    height: 40px;
+    background-color: black;
+    color: white;
 }
