--- a/src/app/pages/detail/detail.component.scss
+++ b/src/app/pages/detail/detail.component.scss
@@ -3,6 +3,7 @@
     height: 600px;
     align-items: center;
     justify-content: center;
+    margin-bottom: 20px;
     &__container{
         margin-top: 60px;
     }
@@ -15,5 +16,10 @@
     }
     &__parraf{
         padding-top: 10px;
+    }
+    &__button{
+        height: 20px;
+        width: 25px;
+        cursor: pointer;
     }
 }
