FEAT: some changes

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -22,6 +22,10 @@
         class="header__link"
         [routerLink]="['inscription-student']"
     > {{ "HEADER.INSCRIPTION STUDENT" | translate }}</a>
+    <a
+        class="header__link"
+        [routerLink]="['my-soons']"
+    > {{ "HEADER.MY SOONS" | translate }}</a>
     <div
         class="header__div"
     >
