--- a/src/app/pages/my-soons/components/soons-view/soons-view.component.scss
+++ b/src/app/pages/my-soons/components/soons-view/soons-view.component.scss
@@ -6,11 +6,10 @@
     font-family: Arial, Helvetica, sans-serif;
     justify-content: center;
     text-align: center;
-    width: 250px;
-    display: flex;
-    flex-direction: row;
+    width: 250px;  
     border-radius: 40px;
     background-color: aquamarine;
+    height: 400px;
     &__div{
         height: 300px;
     }
@@ -20,15 +19,16 @@
 }
 .img{
     height: 200px;
-    height: 200px;
     border-radius: 40px;
     margin-top: 10px;
+    width: 200px;
 }
 .button{
-    border-radius: 40px;
-    margin: 10px;
+    margin-top: 10px;
+    height: 25px;
+    border-radius: 25px;
+    width: 50px;
     background-color: black;
     color: antiquewhite;
-    height: 50px;
-    width: 50px;
+    cursor: pointer;
 }
