--- a/src/app/pages/inscription-student/inscription-student.component.html
+++ b/src/app/pages/inscription-student/inscription-student.component.html
@@ -23,7 +23,10 @@
         *ngIf="studentForm"
         name="student"
         [formGroup]="studentForm"
-        (submit)="registerNewStudent()">
+        
+        (submit)="saveSoon()"
+        >
+
         <div
             class="register__form"
         >
