--- a/src/app/pages/my-soons/my-soons.component.html
+++ b/src/app/pages/my-soons/my-soons.component.html
@@ -1,3 +1,7 @@
+<button
+    (click)="logoutUser()"
+>LOGOUT</button>
+
 <h2
     class="soons__h1"
 >{{ "MYSOONS.THESE ARE THE PEOPLE YOU HAVE SIGNED UP" | translate }}</h2>
