--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -13,6 +13,8 @@
         text-decoration: none;
         text-transform: uppercase;
         color: black;
+        font-size: small;
+        font-weight: bold;
     }
     &__link:hover{
         color: yellowgreen;
