FEAT SOME CHANGES

--- a/src/app/pages/my-soons/my-soons.component.html
+++ b/src/app/pages/my-soons/my-soons.component.html
@@ -1,6 +1,11 @@
-<button
+<div
+    class="container__button"
+>
+    <button
+    class="button"
     (click)="logoutUser()"
->LOGOUT</button>
+    >LOGOUT</button>
+</div>
 
 <h2
     class="soons__h1"
