--- a/src/app/pages/login/login/login.component.html
+++ b/src/app/pages/login/login/login.component.html
@@ -1,3 +1,8 @@
-<button
-    (click)="loginUser()"
->{{ "LOGIN.LOGIN" | translate}}</button>
+<div
+    class="container"
+>
+    <button
+        class="container__button"
+        (click)="loginUser()"
+    >{{ "LOGIN.LOGIN" | translate}}</button>
+</div>
