--- a/src/app/pages/character-list/character-list.component.scss
+++ b/src/app/pages/character-list/character-list.component.scss
@@ -32,3 +32,10 @@
     background-color: black;
     color: white;
 }
+
+.pagination__container{
+    background-color: blanchedalmond;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+}
