FEAT: about component

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -32,6 +32,11 @@
         class="header__link"
         [routerLink]="['login']"
     > <i class="fa-solid fa-user"></i> {{ "HEADER.LOGIN" | translate }}</a>
+    <a
+        *ngIf="!isLogged"
+        class="header__link"
+        [routerLink]="['about']"
+    >{{ "HEADER.ABOUT" | translate }}</a>
     <div
         class="header__div"
     >
